Job/Logs/Test.err
Traceback (most recent call last):
  File "Job_benchmark.py", line 65, in <module>
    RMSE_tot.append(l[1])
IndexError: list index out of range
Traceback (most recent call last):
  File "Job_benchmark.py", line 44, in <module>
    li = Computing_functions.Compute_shuffle_benchmark(Oc = oc, NN_attributes = NN_attributes)
NameError: name 'oc' is not defined
## OAR [2022-04-28 10:33:54] Job 71450124 KILLED ##
python: can't open file 'Job_benchmark.py': [Errno 2] No such file or directory
Traceback (most recent call last):
  File "Job_benchmark.py", line 5, in <module>
    from Scripts import Trainings
ModuleNotFoundError: No module named 'Scripts'
Traceback (most recent call last):
  File "Job_benchmark.py", line 5, in <module>
    from Scripts import Trainings
ModuleNotFoundError: No module named 'Scripts'
  File "Job_benchmark.py", line 4
    from ../Scripts import Trainings
           ^
SyntaxError: invalid syntax
./Job.py: line 11: ain_big.py: command not found
/bin/bash: ./bench.py: Permission denied
